--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#ffffff">
   <title>Fokachat</title>    
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" />                           
 </head>
 <body>
   <header>
@@ -93,7 +93,7 @@
     };
 
     const COLORS = ["#e6edf3", "#dbe2ea", "#eef2f6", "#f4f7fb", "#e9eef6"];
-    const EMOJIS = ["🦊", "🦉", "🦄", "🐼", "🐧", "🦋", "🐙", "🐳", "🐱", "🐯", "🐸", "🦕", "🛰️", "🌌", "💫", "🎧", "🎲", "🎯", "📡"];
+    const EMOJIS = ["🦊", "🦉", "🦄", "🐼", "🐧", "👽", "🐙", "🐳", "🐱", "🐯", "🐸", "🦕", "🛰️", "🌌", "💫", "🎧", "🎲", "🎯", "📡"];
     const ADJ = ["Ágil", "Sutil", "Cósmic", "Bravo", "Zen", "Nômade", "Veloz", "Lunar", "Solar", "Risonho", "Críptico", "Brilhante", "Nebuloso", "Furtivo"];
     const NOUN = ["Jaguar", "Orion", "Quasar", "Vagalume", "Cometa", "Cacto", "Viking", "Cobra", "Lince", "Lagarto", "Panda", "Falcon", "Guaxinim"];
     const rnd = (arr) => arr[Math.floor(Math.random() * arr.length)];
@@ -1023,6 +1023,6 @@
     $('#genCodeBtn').addEventListener('click', handleGenerateCode);
     $('#importCodeBtn').addEventListener('click', handleImportCode);
     $('#reseedBtn').addEventListener('click', handleReseed);
-  </script>
+  </script>    
 </body>
 </html>
