--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
     };
 
     const COLORS = ["#e6edf3", "#dbe2ea", "#eef2f6", "#f4f7fb", "#e9eef6"];
-    const EMOJIS = ["🦊", "🦉", "🦄", "🐼", "🐧", "👽", "🐙", "🐳", "🐱", "🐯", "🐸", "🦕", "🛰️", "🌌", "💫", "🎧", "🎲", "🎯", "📡"];
-    const ADJ = ["Ágil", "Sutil", "Cósmic", "Bravo", "Zen", "Nômade", "Veloz", "Lunar", "Solar", "Risonho", "Críptico", "Brilhante", "Nebuloso", "Furtivo"];
-    const NOUN = ["Jaguar", "Orion", "Quasar", "Vagalume", "Cometa", "Cacto", "Viking", "Cobra", "Lince", "Lagarto", "Panda", "Falcon", "Guaxinim"];
+    const EMOJIS = ["🦊", "🦉", "🎃", "🐼", "🐧", "👽", "🐙", "👤", "🐱", "🥸", "🐸", "🎱", "🤖", "👑", "⭐️", "🎧", "🎲", "🎯", "👾"];
+    const ADJ = ["Espectro", "Eclipse", "Criptico", "Bravo", "Prisma", "Nomade", "Atomo", "Lunar", "Solar", "Vortex", "Sigma", "Sombrio", "Nebuloso", "Enigma"];
+    const NOUN = ["Eter", "Orion", "Quasar", "Zenith", "Umbra", "Caos", "Tesla", "Onyx", "Cronos", "Orbita", "Arcano", "Titan", "Oblivion"];
     const rnd = (arr) => arr[Math.floor(Math.random() * arr.length)];
     const uid = () => Math.random().toString(36).slice(2, 10) + Date.now().toString(36).slice(-4);
 
