--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         </div>
       </div>
       <div>
-        </div>
         <div style="margin-top:10px;display:flex;gap:8px;flex-wrap:wrap">
           <button class="btn primary" id="genCodeBtn" title="Exportar código">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2l-5 5h3v7h4v-7h3l-5-5zm0 10v10H8v-2h8v2h-4V12z"/></svg>
@@ -52,22 +51,15 @@
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/></svg>
     </button>
     <button class="tab" data-tab="postar" title="Postar">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/></svg>
     </button>
     <button class="tab" data-tab="perfis" title="Perfis">
-      <svg
-  xmlns="http://www.w3.org/2000/svg"
-  viewBox="0 0 24 24"
-  width="48" height="48"
-  fill="black"
-  role="img"
-  aria-label="Ícone de duas pessoas"
->
-  <circle cx="9" cy="8" r="3.25"/>
-  <circle cx="16.5" cy="9.5" r="2.75"/>
-  <path d="M3.5 18.2c.6-2.9 3.3-4.7 6.1-4.7s5.5 1.8 6.1 4.7"/>
-  <path d="M12.5 17.8c.4-2.2 2.5-3.6 4.6-3.6s4 1.4 4.6 3.6"/>
-</svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48" fill="black" role="img" aria-label="Ícone de duas pessoas">
+        <circle cx="9" cy="8" r="3.25"/>
+        <circle cx="16.5" cy="9.5" r="2.75"/>
+        <path d="M3.5 18.2c.6-2.9 3.3-4.7 6.1-4.7s5.5 1.8 6.1 4.7"/>
+        <path d="M12.5 17.8c.4-2.2 2.5-3.6 4.6-3.6s4 1.4 4.6 3.6"/>
+      </svg>
     </button>
     <button class="tab" data-tab="sobre" title="Sobre">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/></svg>
@@ -340,7 +332,7 @@
         container.appendChild(document.createElement('div')).className = 'sep';
         const tips = document.createElement('div');
         tips.className = 'muted';
-        tips.innerHTML = 'Dica: clique no seu nome em qualquer mensagem para ver seu mural pessoal.';
+        tips.innerHTML = 'Dica: clique no seu nome em qualquer mensagem para ver seu mural pessoal. No feed, arraste uma mensagem sua para a direita para editar (em até 15 minutos) ou para a esquerda para apagar. Toque duas vezes para curtir!';
         container.appendChild(tips);
         const spacer = document.createElement('div');
         spacer.className = 'spacer';
@@ -378,9 +370,9 @@
             O <b>Fokachat</b> é um mural anônimo para compartilhar ideias, pensamentos e mensagens de forma divertida, gentil e criativa. Aqui, você pode se expressar livremente usando um perfil anônimo, interagir com outros usuários e construir uma comunidade vibrante. Confira como aproveitar ao máximo:
           </div>
           <div class="sep"></div>
-          <div class="ranking-text"><b>Feed</b>: Explore mensagens públicas postadas nos últimos 5 dias, organizadas por ordem cronológica (do mais recente ao mais antigo). É o lugar perfeito para se inspirar e acompanhar o que a comunidade está compartilhando!</div>
+          <div class="ranking-text"><b>Feed</b>: Explore mensagens públicas postadas nos últimos 5 dias, organizadas por ordem cronológica (do mais recente ao mais antigo). Toque duas vezes em uma mensagem para curtir. Se for sua mensagem, arraste para a direita para editar (em até 15 minutos) ou para a esquerda para apagar. É o lugar perfeito para se inspirar e acompanhar o que a comunidade está compartilhando!</div>
           <div class="ranking-text"><b>Postar</b>: Escreva mensagens curtas (até 280 caracteres) e publique no feed público. Você pode postar até <b>7 mensagens por dia</b>. Seja criativo, gentil ou curioso, mas sempre respeite os outros!</div>
-          <div class="ranking-text"><b>Ranking</b>: Veja as <b>10 mensagens mais curtidas</b> de todos os tempos. Curta mensagens que você gosta clicando no ícone de coração (♡) e ajude suas favoritas a subirem no ranking!</div>
+          <div class="ranking-text"><b>Ranking</b>: Veja as <b>10 mensagens mais curtidas</b> de todos os tempos. Curta mensagens que você gosta com dois toques e ajude suas favoritas a subirem no ranking!</div>
           <div class="ranking-text"><b>Perfis</b>: Descubra perfis ativos (que interagiram nas últimas 24 horas). Clique no nome ou no botão "Ver mural" para explorar as mensagens de um usuário específico.</div>
           <div class="ranking-text"><b>Meu Perfil</b>: Veja suas mensagens, mensagens curtidas e progresso dos selos clicando no botão de perfil no cabeçalho.</div>
           <div class="ranking-text"><b>Sincronizar Perfil</b>: Quer usar o mesmo perfil anônimo em outro dispositivo? No cabeçalho, clique no ícone de exportação para gerar um código de transferência. Depois, em outro navegador ou dispositivo, use o ícone de importação e cole o código para carregar seu perfil. <b>Cuidado</b>: guarde o código em segurança, pois ele dá acesso ao seu ID anônimo!</div>
@@ -528,22 +520,22 @@
       }
     };
 
-        function renderHeader() {
-        const me = DB.user;
-        const meLine = `
-          <div>
-          <span>Conectado como:</span><br>
-          <b>${me.name}${getUserBadges(me.id)}</b> ${DB.connected ? '✅' : ''}
-          </div>
-          `;
-          $('#meLine').innerHTML = meLine;
+    function renderHeader() {
+      const me = DB.user;
+      const meLine = `
+        <div>
+        <span>Conectado como:</span><br>
+        <b>${me.name}${getUserBadges(me.id)}</b> ${DB.connected ? '✅' : ''}
+        </div>
+        `;
+      $('#meLine').innerHTML = meLine;
 
-          const headerAv = $('#headerAvatar');
-          headerAv.innerHTML = '';
-          const av = makeAvatar(me);
-          av.classList.add('small');
-          headerAv.appendChild(av);
-     }
+      const headerAv = $('#headerAvatar');
+      headerAv.innerHTML = '';
+      const av = makeAvatar(me);
+      av.classList.add('small');
+      headerAv.appendChild(av);
+    }
 
     function makeAvatar(user, size = '44px') {
       const d = document.createElement('div');
@@ -587,6 +579,7 @@
       const user = DB.users.find(u => u.id === msg.userId) || { name: '(desconhecido)', emoji: '❔', bg: '#ddd' };
       const el = document.createElement('div');
       el.className = 'msg';
+      el.dataset.messageId = msg.id; // Para identificar a mensagem nos eventos
       const av = makeAvatar(user);
       const content = document.createElement('div');
       content.className = 'content';
@@ -597,12 +590,7 @@
       nameLink.onclick = (e) => { e.preventDefault(); showUser(user.id); };
       const meta = document.createElement('div');
       meta.className = 'meta';
-      meta.innerHTML = `<span class="muted">${timeAgo(msg.createdAt)}</span>`;
-      const likeBtn = document.createElement('button');
-      likeBtn.className = 'btn like';
-      const liked = hasLiked(msg.id, DB.user.id);
-      likeBtn.innerHTML = liked ? `❤ ${countLikes(msg.id)}` : `♡ ${countLikes(msg.id)}`;
-      likeBtn.onclick = () => { toggleLike(msg.id, DB.user.id); updateView(); };
+      meta.innerHTML = `<span class="muted">${timeAgo(msg.createdAt)} • ${hasLiked(msg.id, DB.user.id) ? '❤' : '♡'} ${countLikes(msg.id)}</span>`;
       const text = document.createElement('div');
       text.className = 'ranking-text';
       text.style.margin = '6px 0 8px';
@@ -618,7 +606,139 @@
       content.appendChild(text);
       el.appendChild(av);
       el.appendChild(content);
-      el.appendChild(likeBtn);
+
+      // Adicionar eventos de toque e mouse para arrastar
+      let startX = 0, startY = 0, isDragging = false, translateX = 0;
+      const threshold = 50; // Distância mínima para considerar um gesto
+      const isOwnMessage = msg.userId === DB.user.id;
+      const canEdit = isOwnMessage && (Date.now() - msg.createdAt) <= 15 * 60 * 1000; // 15 minutos
+
+      el.style.position = 'relative';
+      el.style.transition = 'transform 0.2s ease-out, box-shadow 0.2s ease-out';
+      el.style.userSelect = 'none'; // Evita seleção de texto durante o arrastar
+
+      // Eventos de toque
+      el.addEventListener('touchstart', (e) => {
+        if (!isOwnMessage) return; // Só permite arrastar mensagens próprias
+        startX = e.touches[0].clientX;
+        startY = e.touches[0].clientY;
+        isDragging = true;
+        el.style.transition = 'none';
+      });
+
+      el.addEventListener('touchmove', (e) => {
+        if (!isDragging) return;
+        const currentX = e.touches[0].clientX;
+        const currentY = e.touches[0].clientY;
+        const deltaX = currentX - startX;
+        const deltaY = currentY - startY;
+
+        // Verificar se é um movimento horizontal (evitar scroll vertical)
+        if (Math.abs(deltaY) > Math.abs(deltaX)) {
+          isDragging = false;
+          el.style.transform = 'translateX(0)';
+          el.style.boxShadow = 'none';
+          return;
+        }
+
+        translateX = deltaX;
+        // Limitar o deslocamento
+        translateX = Math.max(-100, Math.min(100, translateX));
+        el.style.transform = `translateX(${translateX}px)`;
+        // Feedback visual
+        if (translateX > threshold && canEdit) {
+          el.style.boxShadow = '5px 0 10px rgba(0, 255, 0, 0.3)';
+        } else if (translateX < -threshold) {
+          el.style.boxShadow = '-5px 0 10px rgba(255, 0, 0, 0.3)';
+        } else {
+          el.style.boxShadow = 'none';
+        }
+        e.preventDefault();
+      });
+
+      el.addEventListener('touchend', (e) => {
+        if (!isDragging) return;
+        isDragging = false;
+        el.style.transition = 'transform 0.2s ease-out, box-shadow 0.2s ease-out';
+        el.style.transform = 'translateX(0)';
+        el.style.boxShadow = 'none';
+
+        if (translateX > threshold && canEdit) {
+          handleEditMessage(msg);
+        } else if (translateX < -threshold) {
+          handleDeleteMessage(msg);
+        }
+        translateX = 0;
+      });
+
+      // Eventos de mouse
+      el.addEventListener('mousedown', (e) => {
+        if (!isOwnMessage) return;
+        startX = e.clientX;
+        startY = e.clientY;
+        isDragging = true;
+        el.style.transition = 'none';
+      });
+
+      el.addEventListener('mousemove', (e) => {
+        if (!isDragging) return;
+        const currentX = e.clientX;
+        const currentY = e.clientY;
+        const deltaX = currentX - startX;
+        const deltaY = currentY - startY;
+
+        if (Math.abs(deltaY) > Math.abs(deltaX)) {
+          isDragging = false;
+          el.style.transform = 'translateX(0)';
+          el.style.boxShadow = 'none';
+          return;
+        }
+
+        translateX = deltaX;
+        translateX = Math.max(-100, Math.min(100, translateX));
+        el.style.transform = `translateX(${translateX}px)`;
+        if (translateX > threshold && canEdit) {
+          el.style.boxShadow = '5px 0 10px rgba(0, 255, 0, 0.3)';
+        } else if (translateX < -threshold) {
+          el.style.boxShadow = '-5px 0 10px rgba(255, 0, 0, 0.3)';
+        } else {
+          el.style.boxShadow = 'none';
+        }
+        e.preventDefault();
+      });
+
+      el.addEventListener('mouseup', () => {
+        if (!isDragging) return;
+        isDragging = false;
+        el.style.transition = 'transform 0.2s ease-out, box-shadow 0.2s ease-out';
+        el.style.transform = 'translateX(0)';
+        el.style.boxShadow = 'none';
+
+        if (translateX > threshold && canEdit) {
+          handleEditMessage(msg);
+        } else if (translateX < -threshold) {
+          handleDeleteMessage(msg);
+        }
+        translateX = 0;
+      });
+
+      el.addEventListener('mouseleave', () => {
+        if (isDragging) {
+          isDragging = false;
+          el.style.transition = 'transform 0.2s ease-out, box-shadow 0.2s ease-out';
+          el.style.transform = 'translateX(0)';
+          el.style.boxShadow = 'none';
+          translateX = 0;
+        }
+      });
+
+      // Evento de duplo clique para curtir
+      el.addEventListener('dblclick', (e) => {
+        e.preventDefault();
+        toggleLike(msg.id, DB.user.id);
+        updateView();
+      });
+
       return el;
     }
 
@@ -666,6 +786,80 @@
           console.error('Erro ao atualizar likes na nuvem:', err);
         }
       }
+    }
+
+    async function handleEditMessage(msg) {
+      if (msg.userId !== DB.user.id || (Date.now() - msg.createdAt) > 15 * 60 * 1000) {
+        alert('Você só pode editar suas mensagens nos primeiros 15 minutos após postar.');
+        return;
+      }
+      showModal(`
+        <h3>Editar mensagem</h3>
+        <div style="margin-top:6px">Edite sua mensagem (máx. 280 caracteres):</div>
+        <div style="margin-top:10px"><textarea id="editText" style="width:100%;padding:8px;border-radius:8px;border:1px solid #ddd" maxlength="280">${msg.text}</textarea></div>
+        <div style="margin-top:12px;display:flex;gap:8px">
+          <button class="btn primary" id="saveEdit"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/></svg></button>
+          <button class="btn" id="cancelEdit"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg></button>
+        </div>
+        <div class="muted-note">A mensagem será atualizada no feed público.</div>
+      `);
+      $('#cancelEdit').onclick = closeModal;
+      $('#saveEdit').onclick = async () => {
+        const newText = $('#editText').value.trim();
+        if (newText.length === 0) {
+          alert('A mensagem não pode estar vazia.');
+          return;
+        }
+        msg.text = newText;
+        DB.user.lastActive = Date.now();
+        persist();
+        if (DB.connected && msg._firestoreId) {
+          try {
+            const docRef = doc(dbFire, 'messages', msg._firestoreId);
+            await updateDoc(docRef, { text: newText });
+            await updateUserLastActive();
+          } catch (err) {
+            console.error('Erro ao atualizar mensagem no Firestore:', err);
+          }
+        }
+        closeModal();
+        updateView();
+      };
+    }
+
+    async function handleDeleteMessage(msg) {
+      if (msg.userId !== DB.user.id) {
+        alert('Você só pode apagar suas próprias mensagens.');
+        return;
+      }
+      showModal(`
+        <h3>Apagar mensagem</h3>
+        <div style="margin-top:6px">Tem certeza que deseja apagar esta mensagem?</div>
+        <div style="margin-top:10px" class="ranking-text">"${msg.text}"</div>
+        <div style="margin-top:12px;display:flex;gap:8px">
+          <button class="btn danger" id="confirmDelete"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/></svg></button>
+          <button class="btn" id="cancelDelete"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg></button>
+        </div>
+        <div class="muted-note">Esta ação não pode ser desfeita.</div>
+      `);
+      $('#cancelDelete').onclick = closeModal;
+      $('#confirmDelete').onclick = async () => {
+        DB.messages = DB.messages.filter(m => m.id !== msg.id);
+        delete DB.likes[msg.id];
+        DB.user.lastActive = Date.now();
+        persist();
+        if (DB.connected && msg._firestoreId) {
+          try {
+            const docRef = doc(dbFire, 'messages', msg._firestoreId);
+            await deleteDoc(docRef);
+            await updateUserLastActive();
+          } catch (err) {
+            console.error('Erro ao apagar mensagem no Firestore:', err);
+          }
+        }
+        closeModal();
+        updateView();
+      };
     }
 
     function switchTab(tab) {
@@ -735,7 +929,7 @@
       try {
         const usersCol = collection(dbFire, 'users');
         DB.usersUnsub = onSnapshot(usersCol, snapshot => {
-          snapshot.docChanges().forEach(change => {
+snapshot.docChanges().forEach(change => {
             const data = change.doc.data();
             const u = {
               id: data.id,
@@ -1029,11 +1223,11 @@
     $('#reseedBtn').addEventListener('click', handleReseed);
   </script> 
   <script>
-  if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("sw.js")
-      .then(() => console.log("Service Worker registrado"))
-      .catch(err => console.error("SW erro:", err));
-  }
-</script>   
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("sw.js")
+        .then(() => console.log("Service Worker registrado"))
+        .catch(err => console.error("SW erro:", err));
+    }
+  </script>   
 </body>
 </html>
